# encoder

./: biome.json  package-lock.json  package.json
apps/provider/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
apps/provider/app/: main.py
apps/provider/app/api/v1/: api.py
apps/provider/app/api/v1/endpoints/: recordings.py
apps/provider/app/core/: config.py  minio_client.py
apps/provider/app/db/: base.py
apps/provider/app/models/: pagination_metadata.py  recording.py
apps/provider/app/schemas/: recording.py
apps/web/: .env.example  next.config.ts  package.json  postcss.config.mjs  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/@action/(.)recordings/new/: page.tsx
apps/web/src/app/recordings/: page.tsx
apps/web/src/app/recordings/new/: page.tsx
apps/web/src/components/: action-sheet.tsx  recordings-form.tsx  recordings-table.tsx
apps/web/src/components/providers/: model-provider.tsx  nuqs-provider.tsx  query-provider.tsx  theme-provider.tsx
apps/web/src/hooks/: index.ts  use-collection-mutation.ts  use-optimistic-mutation.ts  use-resource-mutation.ts
apps/web/src/lib/audio/: encodec.ts  metadata.ts  process.ts
apps/web/src/lib/utils/query/: index.ts  parse-search-params.ts  unwrap-result.ts
apps/web/src/server/: recordings.ts
apps/web/src/server/types/: pagination.ts  system.ts
apps/web/src/server/utils/: pagination.ts
