[tool.poetry]
name = "provider"
version = "0.1.0"
description = "Provider API service"
authors = ["Xhurian Shaba <xhurian.shaba@outlook.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
minio = "^7.2.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
alembic = "^1.13.0"
pytest = "^8.0.0"
httpx = "^0.26.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
numpy = "^1.24.0"
torch = "^2.0.0"
soundfile = "^0.12.1"
encodec = "^0.1.1"
resampy = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
